small styling text

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -140,13 +140,20 @@ html, body {
     height:100%;
 } 
 
-body {
-    overflow:scroll;
-    background-image: url('Teyvat_ccexpress.jpeg');
-    background-size: cover;
-    background-repeat: no-repeat;
+
+
+.bg{
+    background-image: url("Teyvat.jpg");
+
+    /* Full height */
+    height: 100%; 
+  
+    /* Center and scale the image nicely */
     background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
+
 .bg-text {
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
@@ -166,7 +173,7 @@ body {
 
 button.btn-start{
     position:relative;
-    bottom: 50%; 
+    top: 50%; 
     left: 50%;
 }
 
