--- a/styles/styles.less
+++ b/styles/styles.less
@@ -145,13 +145,12 @@ html, body {
 .bg{
     background-image: url("Teyvat.jpg");
 
-    /* Full height */
-    height: 100%; 
+    height: 210vh;; 
   
     /* Center and scale the image nicely */
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100% 100%;
 }
 
 .bg-text {
@@ -172,8 +171,8 @@ html, body {
   }
 
 button.btn-start{
-    position:relative;
-    top: 50%; 
-    left: 50%;
+    position:fixed;
+    top: 62%; 
+    left: 44.5%;
 }
 
