slight scaling improvements

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -158,21 +158,21 @@ html, body {
     background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
     color: white;
     font-weight: bold;
-    font-size: 400%;
-    border: 10px solid #f1f1f1;
+    font-size: 10vh;
+    border: 1.5vh solid #f1f1f1;
     position: fixed;
-    top: 50%;
-    left: 50%;
+    top: 50vh;
+    left: 50vw;
     transform: translate(-50%, -50%);
     z-index: 2;
-    width: 400px;
-    padding: 20px;
+    width: 60vh;
+    padding: 2vh;
     text-align: center;
   }
 
 button.btn-start{
     position:fixed;
-    top: 62%; 
-    left: 44.5%;
+    top: 62vh; 
+    left: 44.5vw;
 }
 
