button change to map to next page

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -170,7 +170,7 @@ html, body {
     text-align: center;
   }
 
-button.btn-start{
+a.btn-start{
     position:fixed;
     top: 62vh; 
     left: 44.5vw;
