--- a/styles/styles.less
+++ b/styles/styles.less
@@ -142,15 +142,26 @@ html, body {
 
 
 
-.bg{
+.bg-main{
     background-image: url("Teyvat.jpg");
 
-    height: 210vh;; 
+    height: 210vh; 
   
     /* Center and scale the image nicely */
     background-position: center;
     background-repeat: no-repeat;
     background-size: 100% 100%;
+}
+
+.bg-actual{
+    background-image: url("teyvatmap.png");
+
+    height: 100%;
+  
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .bg-text {
