--- a/styles/styles.less
+++ b/styles/styles.less
@@ -136,10 +136,14 @@ table {
 
 
 
-html, body {
-    height:100%;
-} 
 
+html, body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+
+  }
 
 
 .bg-main{
@@ -147,21 +151,18 @@ html, body {
 
     height: 210vh; 
   
-    /* Center and scale the image nicely */
     background-position: center;
     background-repeat: no-repeat;
     background-size: 100% 100%;
 }
 
 .bg-actual{
-    background-image: url("teyvatmap.png");
+    
 
-    height: 100%;
-  
-    /* Center and scale the image nicely */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    height: 100vw;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: fit;
 }
 
 .bg-text {
@@ -186,4 +187,11 @@ a.btn-start{
     top: 62vh; 
     left: 44.5vw;
 }
+
+a.btn-1{
+    position:relative;
+    top: 0vh; 
+    left: 44.5vw;
+}
+
 
