vertical scroll fix

--- a/styles/map.less
+++ b/styles/map.less
@@ -142,7 +142,9 @@ body {
     height : 100%;
 
 }
-
+*{
+    overflow: hidden;
+}
 #zoom {
     width           : 100%;
     height          : 100%;
