--- a/styles/styles.less
+++ b/styles/styles.less
@@ -142,23 +142,23 @@ html, body {
     padding: 0;
     width: 100%;
     height: 100%;
+   
 
   }
 
 
 .bg-main{
-    background-image: url("Teyvat.jpg");
+    background-image: url("../images/Teyvat.jpg");
 
     height: 210vh; 
   
     background-position: center;
     background-repeat: no-repeat;
     background-size: 100% 100%;
+    
 }
 
 .bg-actual{
-    
-
     height: 100vw;
         background-position: center;
         background-repeat: no-repeat;
