--- a/styles/styles.less
+++ b/styles/styles.less
@@ -134,64 +134,84 @@ table {
     border-spacing : 0;
 }
 
-
-
-
-html, body {
-    margin: 0;
+html,
+body {
+    margin : 0;
     padding: 0;
-    width: 100%;
-    height: 100%;
-   
-
-  }
-
-
-.bg-main{
-    background-image: url("../images/Teyvat.jpg");
-
-    height: 210vh; 
-  
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    
+    width  : 100%;
+    height : 100%;
 }
 
-.bg-actual{
-    height: 100vw;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: fit;
+a {
+    color: white;
+    text-decoration: none;
+}
+
+
+.bg-main {
+    background-image: url("../images/Teyvat.jpg");
+
+    height: 210vh;
+
+    background-position: center;
+    background-repeat  : no-repeat;
+    background-size    : 100% 100%;
+
+}
+
+.bg-actual {
+    height             : 100vw;
+    background-position: center;
+    background-repeat  : no-repeat;
+    background-size    : fit;
 }
 
 .bg-text {
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
-    color: white;
-    font-weight: bold;
-    font-size: 10vh;
-    border: 1.5vh solid #f1f1f1;
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/opacity/see-through */
+    color           : white;
+    font-weight     : bold;
+    font-size       : 10vh;
+    border          : 1.5vh solid #f1f1f1;
+    position        : fixed;
+    top             : 50vh;
+    left            : 50vw;
+    transform       : translate(-50%, -50%);
+    z-index         : 2;
+    width           : 60vh;
+    padding         : 2vh;
+    text-align      : center;
+}
+
+a.btn-start {
     position: fixed;
-    top: 50vh;
-    left: 50vw;
-    transform: translate(-50%, -50%);
-    z-index: 2;
-    width: 60vh;
-    padding: 2vh;
-    text-align: center;
-  }
-
-a.btn-start{
-    position:fixed;
-    top: 62vh; 
-    left: 44.5vw;
+    top     : 62vh;
+    left    : 44.5vw;
 }
 
-a.btn-1{
-    position:relative;
-    top: 0vh; 
-    left: 44.5vw;
+a.btn-1 {
+    position: relative;
+    top     : 0vh;
+    left    : 44.5vw;
 }
 
+.navbar-brand {
+    padding-left: 1rem;
+}
 
+#profile {
+    a {
+        color: rgba(255, 255, 255, 0.75);
+    }
+    a:hover {
+        color: white; 
+    }
+
+    img {
+        width: 2rem;
+        height: 2rem;
+        margin: 0 0.5rem;
+    }
+}
