--- a/styles/profile.less
+++ b/styles/profile.less
@@ -4,7 +4,7 @@
         width: min-content;
         padding-right: 2rem;
     }
-    li:last-child{
+    .row li:last-child{
         padding-right: 0;
     }
     img{
