--- a/styles/map.less
+++ b/styles/map.less
@@ -157,3 +157,18 @@ div#zoom>img {
     width : 100%;
     height: auto;
 }
+
+@media screen and (orientation:portrait) {
+    #map {
+        // height: 100%;
+    }
+    #zoom{
+        // height: 100%;
+
+        transform: scale(calc(100vh / 100vw));
+    }
+    div#zoom>img {
+        height: 100%;
+        // object-fit:none;
+    }
+}
