--- a/styles/profile.less
+++ b/styles/profile.less
@@ -1,5 +1,8 @@
 .bookmarks{
-
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0;
+    justify-content:center;
     li{
         width: min-content;
         padding-right: 2rem;
