--- a/styles/styles.less
+++ b/styles/styles.less
@@ -220,10 +220,25 @@ a.btn-1 {
     margin-left: auto;
 }
 
+#teyvatDropdown {
+    img {
+        width : 20%;
+        height: 20%;
+    }
+}
+
 @media only screen and (max-width: 991px) {
     #profile {
         margin-left: 0;
     }
+
+    #teyvatDropdown {
+        img {
+            width : 5%;
+            height: 5%;
+        }
+    }
+
     .navbar-nav {
         margin-left: 1rem;
     }
