--- a/styles/map.less
+++ b/styles/map.less
@@ -151,6 +151,9 @@ body{
     height          : 100%;
     transform-origin: 0px 0px;
     transform       : scale(1) translate(0px, 0px);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: fit;
 }
 
 div#zoom>img {
