--- a/styles/map.less
+++ b/styles/map.less
@@ -4,145 +4,16 @@
 */
 // Authors: George Cao and Daniel Zhao
 
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-    margin        : 0;
-    padding       : 0;
-    border        : 0;
-    font-size     : 100%;
-    font          : inherit;
-    vertical-align: baseline;
-}
-
-/* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-    display: block;
-}
-
-body {
-    line-height: 1;
-}
-
-ol,
-ul {
-    list-style: none;
-}
-
-blockquote,
-q {
-    quotes: none;
-}
-
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-    content: '';
-    content: none;
-}
-
-table {
-    border-collapse: collapse;
-    border-spacing : 0;
-}
+@mondstadt_x: 1031;
+@mondstadt_y: 415;
+@liyue_x: 0;
+@liyue_y: 0;
+@inazuma_x: 0;
+@inazuma_y: 0;
 
 html,
 body {
-    margin : 0;
-    padding: 0;
-    width  : 100%;
-    height : 100%;
     overflow: hidden;
-
 }
 body{
     overflow: hidden;
@@ -160,4 +31,16 @@ body{
 div#zoom>img {
     width : 100%;
     height: auto;
+}
+
+.region-buttons {
+    position : absolute;
+    z-index : 10;
+    li button{
+        background-color: transparent;
+        border: none;
+    }
+    #mondstadt-btn {
+        transform: translate(1031px, 415px);
+    }
 }
