--- a/styles/map.less
+++ b/styles/map.less
@@ -39,8 +39,11 @@ div#zoom>img {
     li button{
         background-color: transparent;
         border: none;
+        img{
+            width: 5rem;
+        }
     }
     #mondstadt-btn {
-        transform: translate(1031px, 415px);
+        transform: translate(78vw, 57vh);
     }
 }
