--- a/styles/map.less
+++ b/styles/map.less
@@ -44,6 +44,7 @@ div#zoom>img {
         }
     }
     #mondstadt-btn {
-        transform: translate(78vw, 57vh);
+        // transform: translate(78vw, 57vh);
+        transform: translate(100%, 0);
     }
 }
