fixed buttons itneracting with sidebar

--- a/styles/map.less
+++ b/styles/map.less
@@ -36,15 +36,17 @@ div#zoom>img {
 .region-buttons {
     position : absolute;
     z-index : 10;
-    li button{
+    top  : 0;
+    right : 0;
+    button {
         background-color: transparent;
         border: none;
-        img{
+        img {
             width: 5rem;
         }
     }
-    #mondstadt-btn {
-        // transform: translate(78vw, 57vh);
-        transform: translate(100%, 0);
-    }
+    // #mondstadt-btn {
+    //     // transform: translate(78vw, 57vh);
+    //     transform: translate(90vw, 0);
+    // }
 }
