--- a/styles/profile.less
+++ b/styles/profile.less
@@ -26,3 +26,27 @@
 .active {
     color: white;
 }
+
+.bookmarks2{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0;
+    justify-content:center;
+    li{
+        width: min-content;
+        padding-right: 2rem;
+    }
+    .row li:last-child{
+        padding-right: 0;
+    }
+    img{
+        height: 10rem;
+        width: 10rem;
+        border-radius: 50%;
+        object-fit: cover;
+    }
+    a{
+        color: black;
+        text-decoration:none;
+    }
+}
