--- a/styles/styles.less
+++ b/styles/styles.less
@@ -306,5 +306,19 @@ a.btn-1 {
     cursor: pointer; /* Add a pointer on hover */
   }
 
+  #overlay2 {
+    position: fixed; /* Sit on top of the page content */
+    display: none; /* Hidden by default */
+    width: 100%; /* Full width (cover the whole page) */
+    height: 100%; /* Full height (cover the whole page) */
+    top: 0;
+    left: 10%;
+    right: 0;
+    bottom: 0;
+    border: solid;
+    background-color: rgba(0,0,0,0.5); /* Black background with opacity */
+    z-index: 3; /* Specify a stack order in case you're using a different order for other elements */
+    cursor: pointer; /* Add a pointer on hover */
+  }
 
 
